# spyro.run

./: .gitignore  .gitmodules  CNAME  Cargo.toml  README.md  all.html  all.js  boards.css  boards.html  boards.js  boards.js.LICENSE.txt  dump-leaderboards.sh  dump-leaderboards.zsh  dump_leaderboards.zsh  extras-to-sqlite.js  extras.ods  index.css  index.html  index.js  leaderboards-dump.sh  leaderboards.txt  package-lock.json  package.json  prachack.css  prachack.html  prachack.js  records.css  records.html  records.js  submit.html  submit.js  test.js  vendors-node_modules_ably_vcdiff-decoder_lib_vcdiff_decoder_js.js  vendors-node_modules_crc_mjs_crc32_js.js  webpack.config.js  www_workers_crc_worker_js.js  www_workers_patch_worker_js.js
assets/: extras.sqlite  extras.sqlite-journal  legend.json5  moneybags2.afphoto  overrides.json5  srcom.sqlite
assets/css/: DatePicker.scss  navbar.scss  palette.scss  prachack.scss
assets/db/: extras.sqlite  srcom.sqlite
assets/json/: filter_uniqs.json5  games.json5  overrides.json5
assets/patches/: spyro2_rs2_ps1.vcdiff  spyro2_rs2_ps2.vcdiff
boards/: index.html
data/: extras.sqlite  overrides.json  overrides.json5  srcom.sqlite
src/: all.js  assets.sqlite  boards.html  boards.js  boards.scss  db.js  index.html  index.js  index.scss  lib.rs  patcher.rs  records.js  sortables.js  submit.js  utils.rs
src/assets/: extras.sqlite  legend.json5  moneybags2.afphoto  overrides.json5
src/components/: App.js  Boards.js  Home.js  (+8 more)
www/: boards.html  boards.js  db.js  index.html  index.js  prachack.html  prachack.js  records.js
(+35 files in other folders)
